--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,8 +11,8 @@
     <!--Hearts box-->
     <LinearLayout
         android:id="@+id/hearts_LAYOUT"
-        android:layout_width="200dp"
-        android:layout_height="50dp"
+        android:layout_width="150dp"
+        android:layout_height="30dp"
 
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp">
@@ -44,10 +44,9 @@
 
         android:id="@+id/main_GRIDLAYOUT"
         android:layout_width="match_parent"
-        android:layout_height="600dp"
+        android:layout_height="450dp"
         android:layout_below="@+id/hearts_LAYOUT"
         android:layout_centerInParent="true"
-        android:layout_marginTop="10dp"
         android:columnCount="3"
         android:rowCount="5">
 
@@ -55,24 +54,27 @@
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/car_pose_right"
             android:layout_width="0dp"
-            android:layout_height="80dp"
+            android:layout_height="0dp"
             android:layout_row="4"
+            android:layout_rowWeight="1"
             android:layout_column="2"
             android:layout_columnWeight="1"
             android:layout_gravity="fill_horizontal"
-            android:layout_margin="30dp"
+            android:layout_margin="20dp"
             android:gravity="center"
             app:srcCompat="@drawable/ic_car" />
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/car_pos_center"
             android:layout_width="0dp"
-            android:layout_height="80dp"
+            android:layout_height="0dp"
             android:layout_row="4"
+            android:layout_rowWeight="1"
             android:layout_column="1"
             android:layout_columnWeight="1"
+
             android:layout_gravity="fill_horizontal"
-            android:layout_margin="40dp"
+            android:layout_margin="20dp"
             android:gravity="center"
             app:srcCompat="@drawable/ic_car" />
 
@@ -80,135 +82,166 @@
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/car_pos_left"
             android:layout_width="0dp"
-            android:layout_height="80dp"
+            android:layout_height="0dp"
             android:layout_row="4"
+            android:layout_rowWeight="1"
             android:layout_column="0"
+
             android:layout_columnWeight="1"
             android:layout_gravity="fill_horizontal"
-            android:layout_margin="40dp"
+            android:layout_margin="20dp"
             android:gravity="center"
             app:srcCompat="@drawable/ic_car" />
 
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/ic_enemy1"
-            android:layout_width="100dp"
-            android:layout_height="80dp"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             android:layout_row="0"
+            android:layout_rowWeight="1"
             android:layout_column="0"
             android:layout_columnWeight="1"
             android:layout_gravity="fill_horizontal"
-            android:layout_marginBottom="50dp"
+
+            android:layout_margin="20dp"
             android:gravity="center"
             app:srcCompat="@drawable/ic_enemy" />
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/ic_enemy2"
-            android:layout_width="100dp"
-            android:layout_height="80dp"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             android:layout_row="0"
+            android:layout_rowWeight="1"
             android:layout_column="1"
             android:layout_columnWeight="1"
+
             android:layout_gravity="fill_horizontal"
+            android:layout_margin="20dp"
             android:layout_weight="1"
             android:gravity="center"
             app:srcCompat="@drawable/ic_enemy" />
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/ic_enemy3"
-            android:layout_width="100dp"
-            android:layout_height="80dp"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             android:layout_row="0"
+
+            android:layout_rowWeight="1"
             android:layout_column="2"
             android:layout_columnWeight="1"
             android:layout_gravity="fill_horizontal"
+            android:layout_margin="20dp"
             android:layout_weight="1"
             android:gravity="center"
             app:srcCompat="@drawable/ic_enemy" />
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/ic_enemy4"
-            android:layout_width="100dp"
-            android:layout_height="80dp"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             android:layout_row="1"
+
+            android:layout_rowWeight="1"
             android:layout_column="0"
 
             android:layout_columnWeight="1"
             android:layout_gravity="fill_horizontal"
-            android:layout_marginBottom="50dp"
+            android:layout_margin="20dp"
             android:layout_weight="1"
             android:gravity="center"
             app:srcCompat="@drawable/ic_enemy" />
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/ic_enemy5"
-            android:layout_width="100dp"
-            android:layout_height="80dp"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             android:layout_row="1"
+            android:layout_rowWeight="1"
+
             android:layout_column="1"
             android:layout_columnWeight="1"
             android:layout_gravity="fill_horizontal"
+            android:layout_margin="20dp"
             android:layout_weight="1"
             android:gravity="center"
             app:srcCompat="@drawable/ic_enemy" />
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/ic_enemy6"
-            android:layout_width="100dp"
-            android:layout_height="80dp"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             android:layout_row="1"
+            android:layout_rowWeight="1"
             android:layout_column="2"
+
             android:layout_columnWeight="1"
+
             android:layout_gravity="fill_horizontal"
+            android:layout_margin="20dp"
             android:layout_weight="1"
             android:gravity="center"
             app:srcCompat="@drawable/ic_enemy" />
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/ic_enemy7"
-            android:layout_width="100dp"
-            android:layout_height="80dp"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+
             android:layout_row="2"
+            android:layout_rowWeight="1"
             android:layout_column="0"
             android:layout_columnWeight="1"
             android:layout_gravity="fill_horizontal"
+            android:layout_margin="20dp"
             android:layout_weight="1"
             android:gravity="center"
             app:srcCompat="@drawable/ic_enemy" />
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/ic_enemy8"
-            android:layout_width="100dp"
-            android:layout_height="80dp"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+
             android:layout_row="2"
+            android:layout_rowWeight="1"
             android:layout_column="1"
             android:layout_columnWeight="1"
             android:layout_gravity="fill_horizontal"
+            android:layout_margin="20dp"
             android:layout_weight="1"
             android:gravity="center"
             app:srcCompat="@drawable/ic_enemy" />
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/ic_enemy9"
-            android:layout_width="100dp"
-            android:layout_height="80dp"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             android:layout_row="2"
+            android:layout_rowWeight="1"
+
             android:layout_column="2"
             android:layout_columnWeight="1"
             android:layout_gravity="fill_horizontal"
+
+            android:layout_margin="20dp"
             android:layout_weight="1"
             android:gravity="center"
             app:srcCompat="@drawable/ic_enemy" />
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/ic_enemy10"
-            android:layout_width="100dp"
-            android:layout_height="80dp"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             android:layout_row="3"
+            android:layout_rowWeight="1"
+
             android:layout_column="0"
             android:layout_columnWeight="1"
             android:layout_gravity="fill_horizontal"
-            android:layout_marginTop="30dp"
+            android:layout_margin="20dp"
             android:layout_weight="1"
 
             android:gravity="center"
@@ -216,13 +249,15 @@
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/ic_enemy11"
-            android:layout_width="100dp"
-            android:layout_height="80dp"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             android:layout_row="3"
+
+            android:layout_rowWeight="1"
             android:layout_column="1"
             android:layout_columnWeight="1"
             android:layout_gravity="fill_horizontal"
-            android:layout_marginTop="30dp"
+            android:layout_margin="20dp"
             android:layout_weight="1"
 
             android:gravity="center"
@@ -230,13 +265,15 @@
 
         <com.google.android.material.imageview.ShapeableImageView
             android:id="@+id/ic_enemy12"
-            android:layout_width="100dp"
-            android:layout_height="80dp"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             android:layout_row="3"
+            android:layout_rowWeight="1"
+
             android:layout_column="2"
             android:layout_columnWeight="1"
             android:layout_gravity="fill_horizontal"
-            android:layout_marginTop="30dp"
+            android:layout_margin="20dp"
             android:layout_weight="1"
             android:gravity="center"
             app:srcCompat="@drawable/ic_enemy" />
@@ -245,43 +282,36 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/main_GRIDLAYOUT"
-        android:layout_alignParentStart="true"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_centerVertical="true"
-        >
 
-        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+        android:layout_marginHorizontal="40dp"
+        android:layout_marginBottom="20dp"
+        android:layout_marginTop="20dp">
+
+        <com.google.android.material.button.MaterialButton
+            app:backgroundTint="@null"
             android:id="@+id/left_Button"
             android:layout_width="70dp"
             android:layout_height="70dp"
-
-            android:layout_alignParentStart="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="25dp"
-            android:layout_marginTop="25dp"
-            android:layout_marginEnd="25dp"
-            android:layout_marginBottom="25dp"
-            android:text="Left"
+            android:background="@drawable/button_arrow_left"
             android:textAlignment="center"
-            android:textSize="10sp"
             app:iconGravity="start" />
 
-        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+        <View
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1" />
+
+
+        <com.google.android.material.button.MaterialButton
+            app:backgroundTint="@null"
             android:id="@+id/right_Button"
             android:layout_width="70dp"
+            android:background="@drawable/button_arrow_right"
             android:layout_height="70dp"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"
-            android:layout_marginStart="200dp"
-            android:layout_marginTop="25dp"
-            android:layout_marginEnd="25dp"
-            android:layout_marginRight="24dp"
-            android:layout_marginBottom="25dp"
-            android:text="Right"
             android:textAlignment="center"
-            android:textSize="10sp" />
+             />
 
     </LinearLayout>
 
