--- a/app/src/main/res/layout/activity_scoreboard.xml
+++ b/app/src/main/res/layout/activity_scoreboard.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="20dp"
-    android:background="@color/light_blue_A400"
+    android:background="@drawable/menu_background"
     tools:context=".ScoreboardActivity">
 
 
@@ -15,7 +15,6 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:padding="20dp"
         android:background="@color/green_50"
         />
 
@@ -24,7 +23,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
-        android:padding="20dp"
+
         android:background="@color/red_300"
         />
 
