--- a/app/src/main/res/layout/fragment_score_list.xml
+++ b/app/src/main/res/layout/fragment_score_list.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".Fragments.ScoreListFragment"
-    android:background="@color/teal_700"
+    android:background="@color/black"
     android:orientation="vertical"
     >
 
