--- a/app/src/main/res/layout/score_item.xml
+++ b/app/src/main/res/layout/score_item.xml
@@ -1,39 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    >
+    app:cardCornerRadius="8dp"
+    app:cardBackgroundColor="@android:color/holo_orange_dark"
+    android:layout_marginBottom="10dp"
+
+    app:cardElevation="8dp">
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:background="@color/light_blue_A400"
-        android:layout_height="wrap_content">
-        <TextView
-            android:id="@+id/number_LBL"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="No)"
-            android:textSize="20sp"
-            android:layout_weight="1"/>
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:padding="20dp"
+        android:gravity="center"
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/name_LBL"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Name:"
+            android:textAlignment="center"
             android:textSize="20sp"
-            android:layout_weight="5"/>
-
-
+            android:textColor="@android:color/white"
+            android:background="@drawable/orange_rounded_background"/>
+        <View
+            android:layout_width="100dp"
+            android:layout_height="match_parent"
+            />
         <TextView
             android:id="@+id/score_LBL"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-
-            android:text="score:"
+            android:text="Score:"
+            android:textAlignment="center"
             android:textSize="20sp"
-            android:layout_weight="5"/>
-
+            android:textColor="@android:color/white"
+            android:background="@drawable/orange_rounded_background"/>
     </LinearLayout>
+
 </androidx.cardview.widget.CardView>
