--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -14,6 +14,7 @@
     <color name="black_overlay">#66000000</color>
     <color name="green_50">#4CAF50</color>
     <color name="red_300">#B80000</color>
+    <color name="mustard_yellow">#FF7B07</color>
 
 
 </resources>
